added more to conclusion

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2211,8 +2211,7 @@
     "\n",
     "What you have seen here is just scratching the surface of what is possible with python and data analysis. Its capabilities range from calculating specific values, from standard deviation to mean, to creating detailed and meaningful plots, to predicting the classification of values provided to a model.\n",
     "\n",
-    "The value python adds to data analysis is vast and varied. It is modular and customisable - interesting and visually appealing plots are easily produced.\n",
-    "\n",
+    "The value python adds to data analysis is vast and varied. It is modular and customisable - interesting and visually appealing plots are easily produced. It is powerful and efficient - with very little input extremely detailed and insightful results can be created. No matter the data, python has something to offer.\n",
     "\n"
    ]
   },
