--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -872,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Box plots are another feature of MatPlotLib. They visualise some of the data we saw using the pandas describe method earlier. It shows the median, first and third quartiles and whiskers that extends either to the last data point or up to 1.5 times the inter quartile range past the first and third quartiles. Any data points past this are represented by what are called fliers, the circles you will see on the plot.\n",
+    "Box plots are another feature of MatPlotLib. They visualise some of the data we saw using the pandas describe method earlier. It shows the median, first and third quartiles and whiskers that extend either to the last data point or up to 1.5 times the inter quartile range past the first and third quartiles. Any data points past this are represented by what are called fliers, the circles you will see on the plot.\n",
     "\n",
     "Again these are fully customisable. According to the MatPlotLib documentation, calling the boxplot function returns a dictionary that contains all of the customisable settings. I take advantage of that here to create a fully coloured model of the different features of each species of iris."
    ]
@@ -990,6 +990,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Removing Fliers\n",
+    "\n",
     "To remove fliers, also known as outliers, I would use the following code.\n",
     "\n",
     "First we check to see if there are outliers by plotting a box plot."
@@ -997,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1088,9 +1090,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the fliers have been removed, however new outliers have appeared because the data has changed. \n",
+    "As we can see, the fliers have been removed, however new outliers have appeared because the data has changed. An interesting discussion around fliers and thier removal can be seen here: [Stack Exchange: Removing outliers renders a new distribution that has its own outliers](https://stats.stackexchange.com/questions/492995/removing-outliers-renders-a-new-distribution-that-has-its-own-outliers).\n",
     "\n",
-    "To do this for any dataset, we can create a function to do this in one line of code."
+    "The reference goes into great detail about how reoving fliers can often produce more fliers and doing so recursively will only reduce the amount of data available for analysis and that there is nothing out of the ordinary for there to be fliers. Only in the case of machine failure, error in recording or something known to be impossible should be removed from the data set and that an automated process for flier removal would be a big mistake.\n",
+    "\n",
+    "For the sake of argument I have created an automated process that would remove fliers. The following code can trim any dataset of fliers by calling a single line of code:"
    ]
   },
   {
@@ -1197,7 +1201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time it has created a boxplot with no outliers. It may be worth removing the removed values from the main dataset."
+    "This time it has created a boxplot with no outliers. It may be worth removing the removed values from the main dataset, but I have no reason to believe that it would have a positive impact on the analysis, if any."
    ]
   },
   {
@@ -1216,7 +1220,11 @@
     "\n",
     "- [Pandas User Guide - Indexing and selecting data](https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy)\n",
     "\n",
-    "I was sent here by a warning when I tried to create a copy of a dataframe by assigning a new variable to an existing dataframe. This creates a reference to this dataframe and anything changed on the new dataframe will be reflected in the original. To get around this I created a copy by using the above link instead."
+    "I was sent here by a warning when I tried to create a copy of a dataframe by assigning a new variable to an existing dataframe. This creates a reference to this dataframe and anything changed on the new dataframe will be reflected in the original. To get around this I created a copy by using the above link instead.\n",
+    "\n",
+    "- [Stack Exchange: Removing outliers renders a new distribution that has its own outliers](https://stats.stackexchange.com/questions/492995/removing-outliers-renders-a-new-distribution-that-has-its-own-outliers)\n",
+    "\n",
+    "An interesting discussion about fliers and data cleaning."
    ]
   },
   {
@@ -2504,10 +2512,11 @@
     "\n",
     "The value python adds to data analysis is vast and varied. It is modular and customisable - interesting and visually appealing plots are easily produced. It is powerful and efficient - with very little input extremely detailed and insightful results can be created. No matter the data, python has something to offer.\n",
     "\n",
-    "Trimming the dataset of outliers can be helpful if the data is affected greatly by their presence. It can however create imbalances in the data, and lead to the removal of huge amounts of data if several iterations of the trimming algorithm are run.\n",
+    "Trimming the dataset of outliers can be helpful if the data is affected greatly by their presence. However, it can also create imbalances in the data, and lead to the removal of huge amounts of data if several iterations of the trimming algorithm are run.  \n",
     "\n",
-    "While models can be powerful, some models can present errors in classification. With this particular dataset, it proves difficult to classify the virginica and versicolor irises as the data is so close. There are many types of classification algorithms and some may work better than the hyperplane model used in this analysis.\n",
-    "\n"
+    "In this dataset no data proved so extraordinary that it needed to be removed, even if the process was detailed. Removing the outliers would not make machine learning models any more accurate as the data is so enmeshed, particularly in the case of the versicolor and virginica irises. So much so that it sometimes proves difficult to classify them properly. \n",
+    "\n",
+    "There are many types of classification algorithms and some may work better than the hyperplane model used in this analysis. If I were to do further analysis I would investigate different types of machine learning models and their efficacy. I would also attempt to visualise the models produced by the machines."
    ]
   },
   {
