ordered cell execution

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2387,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9333333333333333"
+       "0.9666666666666667"
       ]
      },
      "execution_count": 28,
@@ -2431,13 +2431,13 @@
      "text": [
       "                 precision    recall  f1-score   support\n",
       "\n",
-      "    Iris-setosa       1.00      1.00      1.00         8\n",
-      "Iris-versicolor       0.78      1.00      0.88         7\n",
-      " Iris-virginica       1.00      0.87      0.93        15\n",
+      "    Iris-setosa       1.00      1.00      1.00         6\n",
+      "Iris-versicolor       1.00      0.92      0.96        13\n",
+      " Iris-virginica       0.92      1.00      0.96        11\n",
       "\n",
-      "       accuracy                           0.93        30\n",
-      "      macro avg       0.93      0.96      0.93        30\n",
-      "   weighted avg       0.95      0.93      0.94        30\n",
+      "       accuracy                           0.97        30\n",
+      "      macro avg       0.97      0.97      0.97        30\n",
+      "   weighted avg       0.97      0.97      0.97        30\n",
       "\n"
      ]
     }
@@ -2464,7 +2464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction of Species: ['Iris-setosa' 'Iris-versicolor' 'Iris-versicolor']\n"
+      "Prediction of Species: ['Iris-setosa' 'Iris-versicolor' 'Iris-virginica']\n"
      ]
     }
    ],
